Hola, he agregado seccion dentro de articulo, he anexado proiedades.

--- a/codex.html
+++ b/codex.html
@@ -54,7 +54,14 @@ article, aside {
     text-align: center;
     margin:auto;
 }
+section{
+    background-color: aqua;
+    height: 100px;
+    width: 300px;
+    top: 100px;
+    right: 10px;
 
+}
 footer{
     background-color:rgb(163, 226, 81);
     height: 30px;
@@ -71,7 +78,10 @@ footer{
 <body>
    <header><h2>HEADER</h2></header> 
    <nav><h2>NAV</h2></nav>
-   <article><h2>ARTICLE</h2></article>
+
+   <article><h2>ARTICLE</h2>
+    <section><h2>SECCION</h2></section>
+</article>
    <aside><h2>ASIDE</h2></aside>
    <footer><h2>FOOTER</h2></footer>
 </body>
