!Hello!. He agregado seccion dentro de articule, cambie el background color de varios, modifique el nombre del titulo.

--- a/codex.html
+++ b/codex.html
@@ -4,10 +4,10 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>PATITO</title>
+    <title>DISEÑO WEB</title>
 <style>
   header{
-    background-color:rgb(167, 63, 37);
+    background-color:rgb(231, 147, 99);
     height: 30px;
     width: 1230px;
     border-radius:2px solid rgb(9, 1, 20);
@@ -15,7 +15,7 @@
     margin: auto;
 }
 nav{
-    background-color:rgb(4, 151, 70);
+    background-color:rgb(123, 240, 123);
     height: 30px;
     width: 1230px;
     border-radius:2px solid rgb(2, 8, 2);
@@ -23,7 +23,7 @@ nav{
     margin:auto;
 }
 article{
-    background-color: mediumvioletred;
+    background-color: rgb(224, 102, 180);
     height: 200px;
     width: 620px;
     border-radius: 2px solid rgb(101, 153, 101);
@@ -33,14 +33,16 @@ article{
     top: 115px;
 }
 section{
-    background-color: rgb(231, 138, 138);
-    height: 150px;
-    width: 150px ;
-    border: radius 1px chocolate;
+    background-color: rgb(233, 181, 207);
+    height: 110px;
+    width: 600px ;
+    border: radius 1px rgb(49, 170, 38);
     margin:auto;
+    left: 30px;
+    top: 50px;
 }
 aside{
-    background-color:rgb(201, 241, 148);
+    background-color:rgb(155, 154, 204);
     height: 200px;
     width: 600px;
     border-radius: 1px rgb(55, 158, 124);
@@ -54,16 +56,8 @@ article, aside {
     text-align: center;
     margin:auto;
 }
-section{
-    background-color: aqua;
-    height: 100px;
-    width: 300px;
-    top: 100px;
-    right: 10px;
-
-}
 footer{
-    background-color:rgb(163, 226, 81);
+    background-color:rgb(226, 233, 131);
     height: 30px;
     border-radius:2px solid rgb(9, 1, 20);
     text-align: center;
